<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.developer.agonzalez.crypto_manager.OpeningScreen">

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="225dp"
        android:layout_height="65dp"
        android:layout_marginEnd="176dp"
        android:layout_marginLeft="177dp"
        android:layout_marginRight="176dp"
        android:layout_marginStart="177dp"
        android:layout_marginTop="25dp"
        android:text="@string/Author"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="269dp"
        android:layout_height="200dp"
        android:layout_marginEnd="240dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="240dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/txtBitDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAuthor"
        app:srcCompat="@drawable/bitcoinp" />

    <Button
        android:id="@+id/getStarted"
        android:layout_width="169dp"
        android:layout_height="97dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="121dp"
        android:layout_marginLeft="121dp"
        android:layout_marginRight="121dp"
        android:layout_marginStart="121dp"
        android:text="@string/btntxt"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="269dp"
        android:layout_height="200dp"
        android:layout_marginBottom="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/txtLiteCoinDesc"
        app:layout_constraintBottom_toTopOf="@+id/getStarted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.465"
        app:srcCompat="@drawable/l" />
</android.support.constraint.ConstraintLayout>
